--- a/index.html
+++ b/index.html
@@ -1,7 +1,156 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Argentum">
+    <link rel="shortcut icon" type="image/png" href="https://s16.postimg.org/iapkizskl/arg_completesmall.png"/>
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Argentum</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/argentumproject">View on GitHub</a>
+
+          <h1 id="project_title">Argentum</h1>
+          <h2 id="project_tagline">Modern, Digital Currency!</h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <p><img src="https://i.imgsafe.org/09c66e9fbf.png" alt="Argentum Logo"></p>
+
+<h2>
+<a id="ideology" class="anchor" href="#ideology" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ideology</h2>
+
+<p>Argentum is rare, secure, and unique. We believe in scalable, decentralized, censorship-resistant, immutable blockchains. Period</p>
+
+<h2>
+<a id="motivation" class="anchor" href="#motivation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Motivation</h2>
+
+<p>Argentum was created in June 2013: Argentum is designed to be a rare commodity that is not only easily and quickly transferable, but gains value over time. The innovation doesn't end there, Argentum is the first crypto-currency to increase transaction processing capabilities over those of Bitcoin. We wanted to create the first cryptographic currency with almost unlimited scalability; Argentum features 10MB max block size, and 100,000 signature operations per block. Even more exciting, our latest update enables Scrypt and SHA256D mining with AUXPOW support!</p>
+
+<h2>
+<a id="goals" class="anchor" href="#goals" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Goals</h2>
+
+<p>We want Argentum to be a long-term stable investment. We will strive to provide an alternative for people who would like diversification into less risky crypto-currency.</p>
+
+<h2>
+<a id="network" class="anchor" href="#plan" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Network</h2>
+
+<p>Blocks are discovered every 45 seconds on average, and fully confirmed every 4.5 minutes (6 confirmations.) 64 Million Argentums will be mined; once this limit is reached, it is increased by 1.1% annually, the average rate of human population growth.
+
+<h3>
+<a id="development" class="anchor" href="#development" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Development</h3>
+
+<p> We truly envision a community forming around the project and creating a road map. Until this happens, we will present a short list of our goals.
+<ul>
+<li>Mining diversification
+</li>
+<li>Coinomi mobile wallet
+</li>
+<li>Bitsquare.io integration
+</li>
+<li>We need community members to help us get listed on more exchanges
+</li>
+<li>Shapeshift.io integration
+</li>
+<li>Payment processor (ex. something similar to Coinbase or Bitpay)
+</li>
+</p>
+</ul>
+
+<h4>
+<p>Code: <a href="https://github.com/argentumproject">https://github.com/argentumproject</a></p>
+</h4>
+
+<p>
+  <ul>
+    <li>
+      IRC: <a href="https://webchat.freenode.net/?channels=#ARGCurrency">Webchat (freenode.net)</a>
+    </li>
+    <li>
+      IRC: #ARGCurrency @ freenode.net
+    </li>
+  </ul>
+</p>
+
+
+<h3>
+<a id="community" class="anchor" href="#community" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Community</h3>
+
+<ul>
+<li>Website: <a href="http://www.argentum.io">http://www.argentum.io</a></li>
+<li>Official forum thread: <a href="https://bitcointalk.org/index.php?topic=1432608.0">https://bitcointalk.org/index.php?topic=1432608.0</a></li>
+<li>Subreddit: <a href="http://www.reddit.com/r/argentumproject">http://www.reddit.com/r/argentumproject</a></li>
+<li>Block explorers: <a href="https://chainz.cryptoid.info/arg//">https://chainz.cryptoid.info/arg/</a>, <a href="https://www.blockexperts.com/arg">https://www.blockexperts.com/arg</a>
+</li>
+<li>Slack channel: <a href="https://argentumproject.slack.com">https://argentumproject.slack.com</a></li>
+<li>IRC: <a href="https://webchat.freenode.net/?channels=#ARGCurrency">IRC webchat</a></li>
+<li>Twitter: <a href="https://twitter.com/">TBD</a></li>
+<li>Trading: <a href="https://www.cryptopia.co.nz/Exchange/?market=ARG_BTC">http://cryptopia.co.nz</a>, <a href="https://www.coinexchange.io/market/ARG/BTC">CoinExchange.io</a></li>
+</ul>
+
+<h2>
+<a id="what-can-i-do" class="anchor" href="#what-can-i-do" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What can I do?</h2>
+
+<p>Please help us spread the word about this project in the crypto community! </p>
+
+<h3>
+<a id="volunteers" class="anchor" href="#volunteers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Volunteers</h3>
+
+<p>We need more developers, website designers, people who can write for Argentum. Please let us know what are your skills and how you would like to contribute. 
+<li><a href="https://github.com/argentumproject/Volunteer">Github</a></li>
+<li><a href="http://www.reddit.com/r/argentumproject/">Redditors</a></li>
+<li><a href="https://bitcointalk.org/index.php?topic=1432608.0">Bitcointalk</a></li></p>
+
+<h3>
+<a id="users" class="anchor" href="#users" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Users</h3>
+
+<p>Voting is currently open at <a href="https://c-cex.com/?id=vote">C-CEX.com</a> and <a href="https://bter.com/voting">BTER.com</a></p>
+
+<h3>
+<a id="miners" class="anchor" href="#miners" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Miners</h3>
+
+<p>Please contact your favorite pools for Argentum addition, or feel free to start your own pool!</a></p>
+
+
+<p>We have a few mining pools supporting Argentum: </p>
+
+<ul>
+<li><a href="http://ispace.co.uk/">http://ispace.co.uk</a></li>
+<li><a href="http://www.prohashing.com/">http://www.prohashing.com/</a></li>
+<li><a href="http://www.zpool.ca/">http://www.zpool.ca/</a></li>
+</ul>
+
+<h3>
+<a id="donations" class="anchor" href="#donations" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Donations</h3>
+
+<ul>
+<li>ARG: ATM1imaiPtFT5K8F2tsPh4RSpw7ADk9a8G</li>
+<li>BTC: 1LxXw9CRunb5mJfa99aTWQMCqmbroVBUxi</li>
+</ul>
+
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+      </footer>
+    </div>
+
+    
+
+  </body>
 </html>
