--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/argentumproject">View on GitHub</a>
+          <iframe id='widget-ticker-preview' src='//www.coingecko.com/en/widget_component/ticker/argentum/btc?id=argentum' style='border:none; height:125px; width: 275px;' scrolling='no' frameborder='0' allowTransparency='true'></iframe>
 
           <h1 id="project_title">Argentum</h1>
           <h2 id="project_tagline">Modern, Digital Currency!</h2>
@@ -56,6 +56,8 @@
 <p> We truly envision a community forming around the project and creating a road map. Until this happens, we will present a short list of our goals.
 <ul>
 <li>Mining diversification
+</li>
+<li>Electrum Client and Server
 </li>
 <li>Coinomi mobile wallet
 </li>
