Add twitter and other minor info

--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
 <h3>
 <a id="development" class="anchor" href="#development" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Development</h3>
 
-<p> We truly envision a community forming around the project and creating a road map. Until this happens, we will present a short list of our goals.
+<p> Here is a short list of *some* of our goals.
 <ul>
 <li>Mining diversification
 </li>
-<li>Electrum Client and Server
+<li>Coinvault.io (Initial planning underway)
 </li>
-<li>Coinomi mobile wallet
+<li>Electrum Client and Server (Work on the *Server* is finished)
+</li>
+<li>Coinomi mobile wallet (Completed, awaiting correspondence from Coinomi)
 </li>
 <li>Bitsquare.io integration
 </li>
@@ -99,7 +101,7 @@
 </li>
 <li>Slack channel: <a href="https://argentumproject.slack.com">https://argentumproject.slack.com</a></li>
 <li>IRC: <a href="https://webchat.freenode.net/?channels=#ARGCurrency">IRC webchat</a></li>
-<li>Twitter: <a href="https://twitter.com/">TBD</a></li>
+<li>Twitter: <a href="https://twitter.com/Argentum_ARG">Argentum_ARG on Twitter</a></li>
 <li>Trading: <a href="https://www.cryptopia.co.nz/Exchange/?market=ARG_BTC">http://cryptopia.co.nz</a>, <a href="https://www.coinexchange.io/market/ARG/BTC">CoinExchange.io</a></li>
 </ul>
 
