Update on Coinomi

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 <ul>
 <li>Mining diversification
 </li>
-<li>Coinvault.io (Initial planning underway)
+<li>Coinvault.io
 </li>
 <li>Electrum Client and Server (Work on the *Server* is finished)
 </li>
-<li>Coinomi mobile wallet (Completed, awaiting correspondence from Coinomi)
+<li>Coinomi mobile wallet (Completed, 9/7/2016, awaiting merge from Coinomi <a href="https://github.com/argentumproject/coinomi-android/">Our Coinomi repo is here if you want to build your own APK</a>)
 </li>
 <li>Bitsquare.io integration
 </li>
