--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 <ul>
 <li>Mining diversification
 </li>
-<li>Coinvault.io
+<li>Coinvault.io (<a href="https://www.coinvault.io/Info/Coins">We are now live on Coinvault.io</a>)
 </li>
-<li>Electrum Client and Server (Work on the *Server* is finished)
+<li>Electrum Client and Server (Work on the <a href="https://github.com/argentumproject/electrum-arg-server">*Server*</a> is finished.)
 </li>
 <li>Coinomi mobile wallet (Completed, 9/7/2016, awaiting merge from Coinomi <a href="https://github.com/argentumproject/coinomi-android/">Our Coinomi repo is here if you want to build your own APK</a>)
 </li>
