--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 <ul>
 <li>Website: <a href="http://www.argentum.io">http://www.argentum.io</a></li>
 <li>Official forum thread: <a href="https://bitcointalk.org/index.php?topic=1432608.0">https://bitcointalk.org/index.php?topic=1432608.0</a></li>
+<li>Official forum thread: <a href="https://cryptocointalk.com/topic/50052-argentum-arg/">https://cryptocointalk.com/topic/50052-argentum-arg/</a></li>
 <li>Subreddit: <a href="http://www.reddit.com/r/argentumproject">http://www.reddit.com/r/argentumproject</a></li>
 <li>Block explorers: <a href="https://chainz.cryptoid.info/arg//">https://chainz.cryptoid.info/arg/</a>, <a href="https://www.blockexperts.com/arg">https://www.blockexperts.com/arg</a>
 </li>
