--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </li>
 <li>Coinomi mobile wallet (Completed, 9/7/2016, awaiting merge from Coinomi <a href="https://github.com/argentumproject/coinomi-android/">Our Coinomi repo is here if you want to build your own APK</a>)
 </li>
-<li>Bitsquare.io integration
+<li>Bitsquare.io integration (done)
 </li>
 <li>We need community members to help us get listed on more exchanges
 </li>
@@ -103,7 +103,7 @@
 <li>Slack channel: <a href="https://argentumproject.slack.com">https://argentumproject.slack.com</a></li>
 <li>IRC: <a href="https://webchat.freenode.net/?channels=#ARGCurrency">IRC webchat</a></li>
 <li>Twitter: <a href="https://twitter.com/Argentum_ARG">Argentum_ARG on Twitter</a></li>
-<li>Trading: <a href="https://www.cryptopia.co.nz/Exchange/?market=ARG_BTC">http://cryptopia.co.nz</a>, <a href="https://www.coinexchange.io/market/ARG/BTC">CoinExchange.io</a></li>
+<li>Trading: <a href="http://bitsquare.io">*Bitsquare*</a>, <a href="https://www.cryptopia.co.nz/Exchange/?market=ARG_BTC">*http://cryptopia.co.nz*</a>, <a href="https://www.coinexchange.io/market/ARG/BTC">*CoinExchange.io*</a></li>
 </ul>
 
 <h2>
