--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </li>
 <li>Coinvault.io (<a href="https://www.coinvault.io/Info/Coins">We are now live on Coinvault.io</a>)
 </li>
-<li>Electrum Client and Server (Work on the <a href="https://github.com/argentumproject/electrum-arg-server">*Server*</a> is finished.)
+<li>Electrum  <a href="https://github.com/argentumproject/electrum-arg">Client</a> and <a href="https://github.com/argentumproject/electrum-arg-server">Server</a> *Please help test the client (need help with building a windows version)* Work on the server is complete.
 </li>
 <li>Coinomi mobile wallet (Completed, 9/7/2016, awaiting merge from Coinomi <a href="https://github.com/argentumproject/coinomi-android/">Our Coinomi repo is here if you want to build your own APK</a>)
 </li>
