--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
 </li>
 <li>Coinvault.io (<a href="https://www.coinvault.io/Info/Coins">We are now live on Coinvault.io</a>)
 </li>
-<li>Electrum  <a href="https://github.com/argentumproject/electrum-arg">Client</a> and <a href="https://github.com/argentumproject/electrum-arg-server">Server</a> *Please help test the client (need help with building a windows version)* Work on the server is complete.
+<li>Electrum  <a href="https://github.com/argentumproject/electrum-arg/releases/">Client</a> and <a href="https://github.com/argentumproject/electrum-arg-server">Server</a>
 </li>
 <li>Coinomi mobile wallet (Completed, 9/7/2016, awaiting merge from Coinomi <a href="https://github.com/argentumproject/coinomi-android/">Our Coinomi repo is here if you want to build your own APK</a>)
 </li>
-<li>Bitsquare.io integration (done)
+<li><a href="bitsquare.io">Bitsquare.io</a> integration (done)
 </li>
 <li>We need community members to help us get listed on more exchanges
 </li>
 <li>Shapeshift.io integration
 </li>
-<li>Payment processor (ex. something similar to Coinbase or Bitpay)
+<li>Payment processor (ex. something similar to Bitpay)
 </li>
 </p>
 </ul>
@@ -136,6 +136,7 @@
 <li><a href="http://ispace.co.uk/">http://ispace.co.uk</a></li>
 <li><a href="http://www.prohashing.com/">http://www.prohashing.com/</a></li>
 <li><a href="http://www.zpool.ca/">http://www.zpool.ca/</a></li>
+<li><a href="https://www.cryptopia.co.nz/Mineshaft?Algo=SHA256&Pool=ARG">https://www.cryptopia.co.nz/Mineshaft?Algo=SHA256&Pool=ARG</a></li>
 </ul>
 
 <h3>
