--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </li>
 <li>Coinomi mobile wallet (Completed, 9/7/2016, awaiting merge from Coinomi <a href="https://github.com/argentumproject/coinomi-android/">Our Coinomi repo is here if you want to build your own APK</a>)
 </li>
-<li><a href="bitsquare.io">Bitsquare.io</a> integration (done)
+<li><a href="https://www.bitsquare.io">Bitsquare.io</a> integration (done)
 </li>
 <li>We need community members to help us get listed on more exchanges
 </li>
