--- a/index.html
+++ b/index.html
@@ -133,10 +133,11 @@
 <p>We have a few mining pools supporting Argentum: </p>
 
 <ul>
+<li><a href="https://www.cryptopia.co.nz/Mineshaft?Algo=SHA256&Pool=ARG">https://www.cryptopia.co.nz/Mineshaft?Algo=SHA256&Pool=ARG</a></li>
 <li><a href="http://www.litecoinpool.org">Litecoinpool.org</a> They merge mine, but only pay out in LTC.</li>
+<li><a href="https://mergemining.com/">https://mergemining.com/</a></li>
 <li><a href="http://www.prohashing.com/">http://www.prohashing.com/</a></li>
 <li><a href="http://www.zpool.ca/">http://www.zpool.ca/</a></li>
-<li><a href="https://www.cryptopia.co.nz/Mineshaft?Algo=SHA256&Pool=ARG">https://www.cryptopia.co.nz/Mineshaft?Algo=SHA256&Pool=ARG</a></li>
 </ul>
 
 <h3>
