--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Argentum">
     <link rel="shortcut icon" type="image/png" href="https://s16.postimg.org/iapkizskl/arg_completesmall.png"/>
+    <link rel="canonical" href="http://argentum.io" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -100,7 +101,7 @@
 <li>Subreddit: <a href="http://www.reddit.com/r/argentumproject">http://www.reddit.com/r/argentumproject</a></li>
 <li>Block explorers: <a href="https://chainz.cryptoid.info/arg//">https://chainz.cryptoid.info/arg/</a>, <a href="https://www.blockexperts.com/arg">https://www.blockexperts.com/arg</a>
 </li>
-<li>Slack channel: <a href="https://argentumproject.slack.com">https://argentumproject.slack.com</a></li>
+<li>Slack channel: <a href="https://argentumproject.herokuapp.com">https://argentumproject.slack.com</a></li>
 <li>IRC: <a href="https://webchat.freenode.net/?channels=#ARGCurrency">IRC webchat</a></li>
 <li>Twitter: <a href="https://twitter.com/Argentum_ARG">Argentum_ARG on Twitter</a></li>
 <li>Trading: <a href="http://bitsquare.io">*Bitsquare*</a>, <a href="https://www.cryptopia.co.nz/Exchange/?market=ARG_BTC">*http://cryptopia.co.nz*</a>, <a href="https://www.coinexchange.io/market/ARG/BTC">*CoinExchange.io*</a></li>
