add novacoin voting link, remove bter

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <h3>
 <a id="users" class="anchor" href="#users" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Users</h3>
 
-<p>Voting is currently open at <a href="https://c-cex.com/?id=vote">C-CEX.com</a> and <a href="https://bter.com/voting">BTER.com</a></p>
+<p>Voting is currently open at <a href="https://c-cex.com/?id=vote">C-CEX.com</a> and <a href="https://novaexchange.com/addcoin/">NovaExchange.com</a></p>
 
 <h3>
 <a id="miners" class="anchor" href="#miners" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Miners</h3>
