--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@
 <li>Slack channel: <a href="https://argentumproject.herokuapp.com">https://argentumproject.slack.com</a></li>
 <li>IRC: <a href="https://webchat.freenode.net/?channels=#ARGCurrency">IRC webchat</a></li>
 <li>Twitter: <a href="https://twitter.com/Argentum_ARG">Argentum_ARG on Twitter</a></li>
-<li>Trading: <a href="http://bitsquare.io">*Bitsquare*</a>, <a href="https://www.cryptopia.co.nz/Exchange/?market=ARG_BTC">*http://cryptopia.co.nz*</a>, <a href="https://www.coinexchange.io/market/ARG/BTC">*CoinExchange.io*</a></li>
+<li>Trading:</li> 
+<li><a href="http://bitsquare.io">*Bitsquare*</a></li>
+<li><a href="https://www.cryptopia.co.nz/Exchange/?market=ARG_BTC">*http://cryptopia.co.nz*</a></li>
+<li><a href="https://www.coinexchange.io/market/ARG/BTC">*CoinExchange.io*</a></li>, 
+<li><a href="https://novaexchange.com/market/BTC_ARG/">*NovaExchange.com*</a></li>
 </ul>
 
 <h2>
