--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <li>Trading:</li> 
 <li><a href="http://bitsquare.io">*Bitsquare*</a></li>
 <li><a href="https://www.cryptopia.co.nz/Exchange/?market=ARG_BTC">*http://cryptopia.co.nz*</a></li>
-<li><a href="https://www.coinexchange.io/market/ARG/BTC">*CoinExchange.io*</a></li>, 
+<li><a href="https://www.coinexchange.io/market/ARG/BTC">*CoinExchange.io*</a></li>
 <li><a href="https://novaexchange.com/market/BTC_ARG/">*NovaExchange.com*</a></li>
 </ul>
 
