--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Argentum">
-    <link rel="shortcut icon" type="image/png" href="https://s16.postimg.org/iapkizskl/arg_completesmall.png"/>
+    <link rel="shortcut icon" type="image/png" href="https://s13.postimg.org/5lnvqfojb/bitcoin32.png"/>
     <link rel="canonical" href="http://argentum.io" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
@@ -29,17 +29,18 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p><img src="https://i.imgsafe.org/09c66e9fbf.png" alt="Argentum Logo"></p>
+        <p><img src="https://s13.postimg.org/tcn98iefr/bitcoin128.png" alt="Argentum Logo"></p>
 
 <h2>
 <a id="ideology" class="anchor" href="#ideology" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ideology</h2>
 
-<p>Argentum is rare, secure, and unique. We believe in scalable, decentralized, censorship-resistant, immutable blockchains. Period</p>
+<p>Argentum is rare, secure, and unique. We believe in scalable, decentralized, censorship-resistant, immutable blockchains.</p>
 
 <h2>
 <a id="motivation" class="anchor" href="#motivation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Motivation</h2>
 
-<p>Argentum was created in June 2013: Argentum is designed to be a rare commodity that is not only easily and quickly transferable, but gains value over time. The innovation doesn't end there, Argentum is the first crypto-currency to increase transaction processing capabilities over those of Bitcoin. We wanted to create the first cryptographic currency with almost unlimited scalability; Argentum features 10MB max block size, and 100,000 signature operations per block. Even more exciting, our latest update enables Scrypt and SHA256D mining with AUXPOW support!</p>
+<p>Argentum was created in June 2013: Argentum is designed to be a rare commodity that is not only easily and quickly transferable, but gains value over time. The innovation doesn't end there, Argentum is the first crypto-currency to increase transaction processing capabilities over those of Bitcoin. We wanted to create the first cryptographic currency with almost unlimited scalability; Argentum features 10MB max block size, and 100,000 signature operations per block. Even more exciting, our latest update will enable Lyra2REv2, Myr-Groestl, Argon2d, and Yescrypt mining for a total of 6 mining algorithms! This will happen around March 13th 2018 at block 2,977,000
+</p>
 
 <h2>
 <a id="goals" class="anchor" href="#goals" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Goals</h2>
@@ -54,23 +55,21 @@
 <h3>
 <a id="development" class="anchor" href="#development" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Development</h3>
 
-<p> Here is a short list of *some* of our goals.
+<p> Here is a list of a few past and present goals. Updated 2/2018
 <ul>
-<li>Mining diversification
+<li>Mining diversification - adding Lyra2REv2, Myr-Groestl, Argon2d, and Yescrypt
 </li>
 <li>Coinvault.io (<a href="https://www.coinvault.io/Info/Coins">We are now live on Coinvault.io</a>)
 </li>
-<li>Electrum  <a href="https://github.com/argentumproject/electrum-arg/releases/">Client</a> and <a href="https://github.com/argentumproject/electrum-arg-server">Server</a>
+<li>Electrum  <a href="https://github.com/argentumproject/electrum-arg/releases/">Client</a> Still a work in progress.
 </li>
-<li>Coinomi mobile wallet (Completed, 9/7/2016, awaiting merge from Coinomi <a href="https://github.com/argentumproject/coinomi-android/">Our Coinomi repo is here if you want to build your own APK</a>)
+<li>Coinomi mobile wallet (Completed, 9/7/2016, awaiting merge from Coinomi
 </li>
-<li><a href="https://www.bitsquare.io">Bitsquare.io</a> integration (done)
+<li><a href="https://www.bitsquare.io">Bitsquare.io</a> (done)
 </li>
-<li>We need community members to help us get listed on more exchanges
+<li>Shapeshift.io 
 </li>
-<li>Shapeshift.io integration
-</li>
-<li>Payment processor (ex. something similar to Bitpay)
+<li>Payment processor **Coming soon** 
 </li>
 </p>
 </ul>
@@ -78,18 +77,6 @@
 <h4>
 <p>Code: <a href="https://github.com/argentumproject">https://github.com/argentumproject</a></p>
 </h4>
-
-<p>
-  <ul>
-    <li>
-      IRC: <a href="https://webchat.freenode.net/?channels=#ARGCurrency">Webchat (freenode.net)</a>
-    </li>
-    <li>
-      IRC: #ARGCurrency @ freenode.net
-    </li>
-  </ul>
-</p>
-
 
 <h3>
 <a id="community" class="anchor" href="#community" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Community</h3>
@@ -99,12 +86,12 @@
 <li>Official forum thread: <a href="https://bitcointalk.org/index.php?topic=1432608.0">https://bitcointalk.org/index.php?topic=1432608.0</a></li>
 <li>Official forum thread: <a href="https://cryptocointalk.com/topic/50052-argentum-arg/">https://cryptocointalk.com/topic/50052-argentum-arg/</a></li>
 <li>Subreddit: <a href="http://www.reddit.com/r/argentumproject">http://www.reddit.com/r/argentumproject</a></li>
-<li>Block explorers: <a href="https://chainz.cryptoid.info/arg//">https://chainz.cryptoid.info/arg/</a>, <a href="https://www.blockexperts.com/arg">https://www.blockexperts.com/arg</a>
+<li>Block explorers: <a href="https://chainz.cryptoid.info/arg//">https://chainz.cryptoid.info/arg/</a>
 </li>
 <li>Slack channel: <a href="https://argentumproject.herokuapp.com">https://argentumproject.slack.com</a></li>
 <li>IRC: <a href="https://webchat.freenode.net/?channels=#ARGCurrency">IRC webchat</a></li>
 <li>Twitter: <a href="https://twitter.com/Argentum_ARG">Argentum_ARG on Twitter</a></li>
-<li>Trading:</li> 
+<h3>Trading:</h3> 
 <li><a href="http://bitsquare.io">*Bitsquare*</a></li>
 <li><a href="https://www.cryptopia.co.nz/Exchange/?market=ARG_BTC">*http://cryptopia.co.nz*</a></li>
 <li><a href="https://www.coinexchange.io/market/ARG/BTC">*CoinExchange.io*</a></li>
@@ -134,15 +121,18 @@
 
 <p>Please contact your favorite pools for Argentum addition, or feel free to start your own pool!</a></p>
 
+<p>With the release of Argentum 4.14.3 you can join P2Pool to mine Lyra2REv2, Myr-Groestl, Argon2d, and Yescrypt: Customized software here 
+https://github.com/protonn/p2pool-argentum</p>
 
 <p>We have a few mining pools supporting Argentum: </p>
 
 <ul>
 <li><a href="https://www.cryptopia.co.nz/Mineshaft?Algo=SHA256&Pool=ARG">https://www.cryptopia.co.nz/Mineshaft?Algo=SHA256&Pool=ARG</a></li>
 <li><a href="http://www.litecoinpool.org">Litecoinpool.org</a> They merge mine, but only pay out in LTC.</li>
-<li><a href="https://mergemining.com/">https://mergemining.com/</a></li>
-<li><a href="http://www.prohashing.com/">http://www.prohashing.com/</a></li>
-<li><a href="http://www.zpool.ca/">http://www.zpool.ca/</a></li>
+<li><a href="https://mergemining.com/">https://mergemining.com/ The status of this pool is unknown</a></li>
+<li><a href="http://www.prohashing.com/">http://www.prohashing.com/ (Scrypt)</a></li>
+<li><a href="http://blockmunch.club/">blockmunch.club/ (SHA256)</a></li>
+<li><a href="http://www.zpool.ca/">http://www.zpool.ca/ (SHA256)</a></li>
 </ul>
 
       </section>
