--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h2>
 <a id="motivation" class="anchor" href="#motivation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Motivation</h2>
 
-<p>Argentum was created in June 2013: Argentum is designed to be a rare commodity that is not only easily and quickly transferable, but gains value over time. The innovation doesn't end there, Argentum is the first crypto-currency to increase transaction processing capabilities over those of Bitcoin. We wanted to create the first cryptographic currency with almost unlimited scalability; Argentum features 10MB max block size, and 100,000 signature operations per block. Even more exciting, our latest update will enable Lyra2REv2, Myr-Groestl, Argon2d, and Yescrypt mining for a total of 6 mining algorithms! This will happen around March 13th 2018 at block 2,977,000
+<p>Argentum was created in June 2013: Argentum is designed to be a rare commodity that is not only easily and quickly transferable, but gains value over time. The innovation doesn't end there, Argentum is the first crypto-currency to increase transaction processing capabilities over those of Bitcoin. We wanted to create the first cryptographic currency with almost unlimited scalability; Argentum features 10MB max block size. Even more exciting, our latest update will enable Lyra2REv2, Myr-Groestl, Argon2d, and Yescrypt mining for a total of 6 mining algorithms! This will happen around March 13th 2018 at block 2,977,000
 </p>
 
 <h2>
@@ -69,7 +69,7 @@
 </li>
 <li>Shapeshift.io 
 </li>
-<li>Payment processor **Coming soon** 
+<li>Merchant integration coming soon
 </li>
 </p>
 </ul>
@@ -91,6 +91,7 @@
 <li>Slack channel: <a href="https://argentumproject.herokuapp.com">https://argentumproject.slack.com</a></li>
 <li>IRC: <a href="https://webchat.freenode.net/?channels=#ARGCurrency">IRC webchat</a></li>
 <li>Twitter: <a href="https://twitter.com/Argentum_ARG">Argentum_ARG on Twitter</a></li>
+
 <h3>Trading:</h3> 
 <li><a href="http://bitsquare.io">*Bitsquare*</a></li>
 <li><a href="https://www.cryptopia.co.nz/Exchange/?market=ARG_BTC">*http://cryptopia.co.nz*</a></li>
@@ -103,9 +104,6 @@
 
 <p>Please help us spread the word about this project in the crypto community! </p>
 
-<h3>
-<a id="volunteers" class="anchor" href="#volunteers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Volunteers</h3>
-
 <p>We need more developers, website designers, people who can write for Argentum. Please let us know what are your skills and how you would like to contribute. 
 <li><a href="https://github.com/argentumproject/Volunteer">Github</a></li>
 <li><a href="http://www.reddit.com/r/argentumproject/">Redditors</a></li>
@@ -114,15 +112,13 @@
 <h3>
 <a id="users" class="anchor" href="#users" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Users</h3>
 
-<p>Voting is currently open at <a href="https://c-cex.com/?id=vote">C-CEX.com</a> and <a href="https://novaexchange.com/addcoin/">NovaExchange.com</a></p>
-
 <h3>
 <a id="miners" class="anchor" href="#miners" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Miners</h3>
 
 <p>Please contact your favorite pools for Argentum addition, or feel free to start your own pool!</a></p>
 
 <p>With the release of Argentum 4.14.3 you can join P2Pool to mine Lyra2REv2, Myr-Groestl, Argon2d, and Yescrypt: Customized software here 
-https://github.com/protonn/p2pool-argentum</p>
+<a href="https://github.com/protonn/p2pool-argentum">https://github.com/protonn/p2pool-argentum</a></p>
 
 <p>We have a few mining pools supporting Argentum: </p>
 
