--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </li>
 <li>Shapeshift.io 
 </li>
-<li>Merchant integration coming soon
+<li>Merchant integration (LocalBitcoinCash.org on 2/24/2018) 
 </li>
 <li>Poloniex
 </li>
@@ -97,6 +97,7 @@
 <li>Twitter: <a href="https://twitter.com/Argentum_ARG">Argentum_ARG on Twitter</a></li>
 
 <h3>Trading:</h3> 
+<li><a href="LocalBitcoinCash.org">*LocalBitcoinCash.org*</a></li>
 <li><a href="http://bitsquare.io">*Bitsquare*</a></li>
 <li><a href="https://www.cryptopia.co.nz/Exchange/?market=ARG_BTC">*http://cryptopia.co.nz*</a></li>
 <li><a href="https://www.coinexchange.io/market/ARG/BTC">*CoinExchange.io*</a></li>
@@ -124,7 +125,6 @@
 <p>We have a few mining pools supporting Argentum: </p>
 
 <ul>
-<li><a href="https://www.cryptopia.co.nz/Mineshaft?Algo=SHA256&Pool=ARG">https://www.cryptopia.co.nz/Mineshaft?Algo=SHA256&Pool=ARG</a></li>
 <li><a href="http://www.litecoinpool.org">Litecoinpool.org</a> They merge mine, but only pay out in LTC.</li>
 <li><a href="https://mergemining.com/">https://mergemining.com/ The status of this pool is unknown</a></li>
 <li><a href="http://www.prohashing.com/">http://www.prohashing.com/ (Scrypt)</a></li>
