--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 <li><a href="http://www.prohashing.com/">http://www.prohashing.com/ (Scrypt)</a></li>
 <li><a href="http://blockmunch.club/">blockmunch.club/ (SHA256)</a></li>
 <li><a href="http://www.zpool.ca/">http://www.zpool.ca/ (SHA256)</a></li>
+<li><a href="https://www.joinmycrypto.tk/">https://www.joinmycrypto.tk/</a></li>
 </ul>
 
       </section>
