--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 <li><a href="http://blockmunch.club/">blockmunch.club/ (SHA256)</a></li>
 <li><a href="http://www.zpool.ca/">http://www.zpool.ca/ (SHA256)</a></li>
 <li><a href="https://www.joinmycrypto.tk/">https://www.joinmycrypto.tk/</a></li>
+<li><a href="http://poolovich.pro/">http://poolovich.pro/ (Myriad-Groestl)</a></li>
 </ul>
 
       </section>
