--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
 
 <ul>
 <li><a href="http://www.litecoinpool.org">Litecoinpool.org</a> They merge mine, but only pay out in LTC.</li>
-<li><a href="https://mergemining.com/">https://mergemining.com/ The status of this pool is unknown</a></li>
-<li><a href="http://www.prohashing.com/">http://www.prohashing.com/ (Scrypt)</a></li>
-<li><a href="http://blockmunch.club/">blockmunch.club/ (SHA256)</a></li>
-<li><a href="http://www.zpool.ca/">http://www.zpool.ca/ (SHA256)</a></li>
-<li><a href="https://www.joinmycrypto.tk/">https://www.joinmycrypto.tk/</a></li>
+<li><a href="https://mergemining.com/">https://mergemining.com/</a> The status of this pool is unknown</li>
+<li><a href="http://www.prohashing.com/">http://www.prohashing.com/</a> (Scrypt)</li>
+<li><a href="http://blockmunch.club/">blockmunch.club/</a> (SHA256)</li>
+<li><a href="http://www.zpool.ca/">http://www.zpool.ca/</a> (SHA256, Scrypt, Lyra2rev2, Yescrypt, Myriad-Groestl)</li>
+<li><a href="https://www.joinmycrypto.tk/">https://www.joinmycrypto.tk/ (Yescrypt)</a></li>
 <li><a href="http://poolovich.pro/">http://poolovich.pro/ (Myriad-Groestl)</a></li>
 </ul>
 
