--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Argentum">
-    <link rel="shortcut icon" type="image/png" href="https://s13.postimg.org/5lnvqfojb/bitcoin32.png"/>
+    <link rel="shortcut icon" type="image/png" href="images/argentum32.png"/>
     <link rel="canonical" href="http://argentum.io" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
@@ -29,7 +29,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p><img src="https://s13.postimg.org/tcn98iefr/bitcoin128.png" alt="Argentum Logo"></p>
+        <p><img src="images/argentum128.png" alt="Argentum Logo"></p>
 
 <h2>
 <a id="ideology" class="anchor" href="#ideology" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ideology</h2>
