update pool and info

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </li>
 <li>Electrum  <a href="https://github.com/argentumproject/electrum-arg/releases/">Client</a> Still a work in progress.
 </li>
-<li>Coinomi mobile wallet (Completed, 9/7/2016, awaiting merge from Coinomi
+<li>Coinomi mobile wallet (Awaiting response from engineering team)
 </li>
 <li><a href="https://www.bitsquare.io">Bitsquare.io</a> (done)
 </li>
@@ -132,6 +132,7 @@
 <li><a href="http://www.zpool.ca/">http://www.zpool.ca/</a> (SHA256, Scrypt, Lyra2rev2, Yescrypt, Myriad-Groestl)</li>
 <li><a href="https://www.joinmycrypto.tk/">https://www.joinmycrypto.tk/ (Yescrypt)</a></li>
 <li><a href="http://poolovich.pro/">http://poolovich.pro/ (Myriad-Groestl)</a></li>
+<li><a href="http://zergpool.com/">http://zergpool.com/ (Scrypt)</a></li>
 </ul>
 
       </section>
