--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 <li><a href="https://www.joinmycrypto.tk/">https://www.joinmycrypto.tk/ (Yescrypt)</a></li>
 <li><a href="http://poolovich.pro/">http://poolovich.pro/ (Myriad-Groestl)</a></li>
 <li><a href="http://zergpool.com/">http://zergpool.com/ (Scrypt)</a></li>
+<li><a href="https://argentum.easymine.online">https://argentum.easymine.online (Argon2d)</a></li>
 </ul>
 
       </section>
