--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 <li><a href="http://poolovich.pro/">http://poolovich.pro/ (Myriad-Groestl)</a></li>
 <li><a href="http://zergpool.com/">http://zergpool.com/ (Scrypt)</a></li>
 <li><a href="https://argentum.easymine.online">https://argentum.easymine.online (Argon2d)</a></li>
+<li><a href="http://pool.hashrefinery.com/">http://pool.hashrefinery.com/ (Scrypt, Yescrypt, Lyra2rev2, Myr-Groestl)</a></li>
 </ul>
 
       </section>
