--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <iframe id='widget-ticker-preview' src='//www.coingecko.com/en/widget_component/ticker/argentum/btc?id=argentum' style='border:none; height:125px; width: 275px;' scrolling='no' frameborder='0' allowTransparency='true'></iframe>
+          <a href="https://www.cryptaldash.com/new-coin-listing?utm_source=partner&utm_medium=referral-widget&utm_campaign=newcoinlistingcomp" target="_blank" title="CryptalDash Coin Listing Competition"><img src="https://www.cryptaldash.com/assets/images/coin-listing-share.jpg" border="0" width="176px" alt="CryptalDash Coin Listing Competition"></a>
 
           <h1 id="project_title">Argentum</h1>
           <h2 id="project_tagline">Modern, Digital Currency!</h2>
