--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 <li><a href="https://argentum.easymine.online">https://argentum.easymine.online (Argon2d)</a></li>
 <li><a href="http://pool.hashrefinery.com/">http://pool.hashrefinery.com/ (Scrypt, Yescrypt, Lyra2rev2, Myr-Groestl)</a></li>
 <li><a href="http://tiny-pool.com/">http://tiny-pool.com/ (Myr-Groestl)</a></li>
+<li><a href="https://crypto.n-engine.com/">https://crypto.n-engine.com/ (SHA256)</a></li>
 </ul>
 
       </section>
