--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
 <li><a href="https://www.cryptopia.co.nz/Exchange/?market=ARG_BTC">*http://cryptopia.co.nz*</a></li>
 <li><a href="https://www.coinexchange.io/market/ARG/BTC">*CoinExchange.io*</a></li>
 <li><a href="https://novaexchange.com/market/BTC_ARG/">*NovaExchange.com*</a></li>
+<li><a href="https://www.simpleswap.io/">*Simpleswap.io*</a></li>
+
 </ul>
 
 <h2>
@@ -138,6 +140,8 @@
 <li><a href="http://pool.hashrefinery.com/">http://pool.hashrefinery.com/ (Scrypt, Yescrypt, Lyra2rev2, Myr-Groestl)</a></li>
 <li><a href="http://tiny-pool.com/">http://tiny-pool.com/ (Myr-Groestl)</a></li>
 <li><a href="https://crypto.n-engine.com/">https://crypto.n-engine.com/ (SHA256)</a></li>
+<li><a href="http://blazepool.com/">http://blazepool.com/ (Myriad-Groestl, Yescrypt, Scrypt, Lyra2rev2)</a></li>
+
 </ul>
 
       </section>
