--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <p>With the release of Argentum 4.14.3 you can join P2Pool to mine Lyra2REv2, Myr-Groestl, Argon2d, and Yescrypt: Customized software here 
 <a href="https://github.com/protonn/p2pool-argentum">https://github.com/protonn/p2pool-argentum</a></p>
 
-<p>We have a few mining pools supporting Argentum: </p>
+<p>Mining pools supporting Argentum: </p>
 
 <ul>
 <li><a href="http://www.litecoinpool.org">Litecoinpool.org</a> They merge mine, but only pay out in LTC.</li>
@@ -135,12 +135,14 @@
 <li><a href="http://www.zpool.ca/">http://www.zpool.ca/</a> (SHA256, Scrypt, Lyra2rev2, Yescrypt, Myriad-Groestl)</li>
 <li><a href="https://www.joinmycrypto.tk/">https://www.joinmycrypto.tk/ (Yescrypt)</a></li>
 <li><a href="http://poolovich.pro/">http://poolovich.pro/ (Myriad-Groestl)</a></li>
-<li><a href="http://zergpool.com/">http://zergpool.com/ (Scrypt)</a></li>
+<li><a href="http://zergpool.com/">http://zergpool.com/ (Scrypt, Lyra2rev2)</a></li>
 <li><a href="https://argentum.easymine.online">https://argentum.easymine.online (Argon2d)</a></li>
 <li><a href="http://pool.hashrefinery.com/">http://pool.hashrefinery.com/ (Scrypt, Yescrypt, Lyra2rev2, Myr-Groestl)</a></li>
 <li><a href="http://tiny-pool.com/">http://tiny-pool.com/ (Myr-Groestl)</a></li>
 <li><a href="https://crypto.n-engine.com/">https://crypto.n-engine.com/ (SHA256)</a></li>
 <li><a href="http://blazepool.com/">http://blazepool.com/ (Myriad-Groestl, Yescrypt, Scrypt, Lyra2rev2)</a></li>
+<li><a href="https://hashing.space/argentum/">https://hashing.space (Argon2d)</a></li>
+<li><a href="https://argentum.easymine.online/start/">https://argentum.easymine.online/start/ (Argon2d, merge mining with UIS-Unitus)</a></li>
 
 </ul>
 
