--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <header class="inner">
           <iframe id='widget-ticker-preview' src='//www.coingecko.com/en/widget_component/ticker/argentum/btc?id=argentum' style='border:none; height:125px; width: 275px;' scrolling='no' frameborder='0' allowTransparency='true'></iframe>
           <a href="https://www.cryptaldash.com/new-coin-listing?utm_source=partner&utm_medium=referral-widget&utm_campaign=newcoinlistingcomp" target="_blank" title="CryptalDash Coin Listing Competition"><img src="https://www.cryptaldash.com/assets/images/coin-listing-share.jpg" border="0" width="176px" alt="CryptalDash Coin Listing Competition"></a>
+          <div style="font-family: Verdana, Tahoma, Arial, sans-serif;font-size: 10px;color: #C9C6BD;text-align: right;padding: 0;margin: 0;width: 260px;border: 2px solid #ddd!important;"><iframe src="https://coinlib.io/widget?type=single&theme=light&coin_id=974&pref_coin_id=1505" width="256" height="150" scrolling="auto" marginwidth="0" marginheight="0" frameborder="0" border="0" style="border:0;margin:0;padding:0;"></iframe>powered by&nbsp;<a href="https://coinlib.io" target="_blank" style="font-size:10px; color:#C9C6BD; text-decoration:none;">Coinlib</a>&nbsp;</div>
 
           <h1 id="project_title">Argentum</h1>
           <h2 id="project_tagline">Modern, Digital Currency!</h2>
